src/lints/any_duplicated/snapshots/flir__lints__any_duplicated__tests__fix_output.snap
---
source: src/lints/any_duplicated/mod.rs
expression: fix_output
---
  OLD:
  ====
any(duplicated(x))
  NEW:
  ====
anyDuplicated(x) > 0

  OLD:
  ====
any(duplicated(foo(x)))
  NEW:
  ====
anyDuplicated(foo(x)) > 0

  OLD:
  ====
any(duplicated(x), na.rm = TRUE)
  NEW:
  ====
anyDuplicated(x) > 0
